[package]
authors = ["Johan Kristell <johan@jott.se>"]
name = "nucleo-f401re"
version = "0.4.1"
edition = "2018"
description = "Board Support crate for the STM32 NUCLEO-f401RE development board"
repository = "https://github.com/jkristell/nucleo-f401re"
readme = "README.md"
license = "0BSD"
keywords = [
    "arm",
    "cortex-m",
    "stm32f401",
    "nucleo",
    "template",
]
categories = [
    "embedded",
    "no-std",
]

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f401"] }

[dev-dependencies]
nb = "1"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
cortex-m-rtic = "0.5"
hd44780-driver = "0.3.0"
tpa2016d2 = "0.2.0"
segment-display = "0.1"
embedded-graphics = { version = "0.6" }
epd-waveshare = { version = "0.4", features = ["graphics"] }

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
