[package]
authors = ["Johan Kristell <johan@jott.se>"]
name = "nucleo-f401re"
version = "0.4.1"
edition = "2018"
description = "Board Support crate for the STM32 NUCLEO-f401RE development board"
repository = "https://github.com/jkristell/nucleo-f401re"
readme = "README.md"
license = "0BSD"
keywords = [
    "arm",
    "cortex-m",
    "stm32f401",
    "nucleo",
    "template",
]
categories = [
    "embedded",
    "no-std",
]

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

default = [
    "defmt-debug",
]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.13", features = ["rt", "stm32f401", "usb_fs"] }

[dev-dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1"
dwt-systick-monotonic = "1.0.0"
hd44780-driver = "0.4.0"
tpa2016d2 = "0.2.0"
segment-display = "0.1"
embedded-graphics = { version = "0.7" }
epd-waveshare = { version = "0.5", features = ["graphics"] }
#infrared = { version = "0.13.0", features = ["defmt"] }
infrared = { git = "https://github.com/jkristell/infrared", rev = "c762c019dac43a129a3108f116c7167a32229608", features = ["defmt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false